# shop_json_generator

./: Cargo.toml
src/: errors.rs  main.rs  shapeset.rs  util.rs
src/structs/: database.rs  folder.rs  mod.rs  set.rs  shop.rs
