[package]
name = "data_price_to_shop_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
json_comments = "0.2.1"
serde = { version = "1.0.143", features = ["serde_derive"] }
serde_json = "1.0.83"
