[package]
name = "data_price_to_shop_json"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.18", features = ["derive"]}
colored = "2.0.0"
error-stack = "0.2.3"
json_comments = "0.2.1"
log = "0.4.17"
owo-colors = "3.5.0"
serde = { version = "1.0.143", features = ["serde_derive"] }
serde_json = "1.0.83"
simple_logger = "4.0.0"
